# simple_graph_api

./: Dockerfile  pyproject.toml
apigrafos/: main.py
