[tool.poetry]
name = "apigrafos"
version = "0.1.0"
description = ""
authors = ["argurafa <rafa-991@hotmail.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
requests = "^2.28.2"
pydantic = "^1.10.4"
networkx = "^3.0"
pyvis = "^0.3.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
